--- a/config/cmc_screening.yml
+++ b/config/cmc_screening.yml
@@ -8,14 +8,14 @@ model_name: NaiveBayes # NaiveBayes, LogisticRegression, KNN, SVM, RandomForest,
 
 # Optuna parameters- https://optuna.org/
 optimize_hyperparameters: False # Use Optuna to optimize hyperparameters
-n_trials: 3
+n_trials: 1
 n_startup_trials: 0
 direction: minimize
 
 # GPU parameters
 use_gpu: True
-gpu_ids: [0, 1]
-data_parallel: True
+gpu_ids: [0]
+data_parallel: False
 
 # Cross validation parameters 
 num_splits: 3
@@ -34,8 +34,8 @@ target_encode: False
 one_hot_encode: False
 
 # Training parameters
-batch_size: 1024
-val_batch_size: 1024
+batch_size: 128
+val_batch_size: 256
 early_stopping_rounds: 20
 epochs: 1000
 logging_period: 100
